--- a/_posts/0000-01-02-megan-a-h.md
+++ b/_posts/0000-01-02-megan-a-h.md
@@ -1,5 +1,6 @@
-
-k
-"
-""""
-exit
+---
+layout: slide
+title: "Welcome to our second slide!"
+---
+This is a slide for megan-a-h
+Use the left arrow to go back!
