--- a/_posts/0000-01-02-megan-a-h.md
+++ b/_posts/0000-01-02-megan-a-h.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to megan-a-h slide!"
 ---
 This is a slide for megan-a-h
 Use the left arrow to go back!
