--- a/_posts/0000-01-02-megan-a-h.md
+++ b/_posts/0000-01-02-megan-a-h.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to megan-a-h slide!"
 ---
-This is a slide for megan-a-h
+This is my awesome slide
 Use the left arrow to go back!
